2007-10-30	Bryan Kadzban	<bryan@linuxfromscratch.org>
	* 55-lfs.rules: Since the dialout group was renamed to uucp, delete
	  the rules that override upstream's assignment of the dialout group.
	  Replace "dialout" with "uucp" on the remaining rules.

2007-10-29	Bryan Kadzban	<bryan@linuxfromscratch.org>
	* 51-lfs.rules: Move to 55-lfs.rules.
	* doc/51-lfs.rules: Move to doc/55-lfs.rules.

2007-10-27	Bryan Kadzban	<bryan@linuxfromscratch.org>
	* 25-lfs.rules: Some rules in here are duplicates of rules from udev's
	  new 50-udev-defaults.rules file; remove them. Override permissions
	  where needed elsewhere (and document overrides in comments).
	* 26-modprobe.rules: Provided by udev's 80-drivers.rules and built-in
	  modaliases for SCSI device-type modules in 2.6.22+ kernels; remove.

	* 25-lfs.rules: Move to 51-lfs.rules.
	* 27-firmware.rules: Move to 81-firmware.rules.
	* 81-cdrom.rules: Move to 61-cdrom.rules.

	* doc/25-lfs.txt: Rename to 51-lfs.txt.
	* doc/26-modprobe.txt: Rename to 80-drivers.txt, and modify to reflect
	  the upstream rules.
	* doc/27-firmware.txt: Rename to 81-firmware.txt.
	* doc/81-cdrom.txt: Rename to 61-cdrom.txt.

	* Makefile: Use new filenames.

2007-07-31	Dan Nicholson <dnicholson@linuxfromscratch.org>
	* 25-lfs.rules: Changed the usb_device rule tto create /dev/bus/usb
	  nodes if the usb_device in 2.6.22+ kernels. The rule was also changed
	  to only trigger on "add" events. This change is not backwards
	  compatible with older kernels.

2007-06-12	Dan Nicholson <dnicholson@linuxfromscratch.org>
	* 25-lfs.rules: Fix the CPUID nodes from cpu/%n/cpu to cpu/%n/cpuid,
	  which is what's expected in userspace apps such as x86info.

2007-06-08	Bryan Kadzban	<bryan@linuxfromscratch.org>
	* 25-lfs.rules: Add rules for DVB devices (create nodes in /dev/dvb/)
	  and floppies (create extra nodes based on CMOS type), copied from
	  the SuSE rules file.  Thanks to Alexander Patrakov for the bugreport.
